--- a/data/cards/yugipedia1054110.yaml
+++ b/data/cards/yugipedia1054110.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control no monsters, or your opponent controls a monster with 2000 or more ATK: You can Special Summon this card from your hand, and if you do, Special Summon 1 Level 8 LIGHT or DARK Dragon monster from your Deck in Defense Position, except "Schwarzschild Infinity Dragon", but its effects are negated. You cannot Special Summon from the Extra Deck the turn you activate this effect, except Dragon Xyz Monsters. You can only use this effect of "Schwarzschild Infinity Dragon" once per turn.
+    If you control no monsters, or your opponent controls a monster with 2000 or more ATK: You can Special Summon this card from your hand, and if you do, Special Summon 1 Level 8 LIGHT or DARK Dragon monster from your Deck in Defense Position, except "Schwarzschild Infinity Dragon", but negate its effects. You cannot Special Summon from the Extra Deck the turn you activate this effect, except Dragon Xyz Monsters. You can only use this effect of "Schwarzschild Infinity Dragon" once per turn.
   de:
   es:
   fr:
