--- a/data/cards/04841383.yaml
+++ b/data/cards/04841383.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby><ruby>繚<rt>リョウ</rt></ruby><ruby>乱<rt>ラン</rt></ruby><ruby>狂<rt>クルイ</rt></ruby><ruby>咲<rt>ザキ</rt></ruby>
-  ja_romaji: Raikaryouran Kuruizaki
+  ja_romaji: Raika Ryouran Kuruizaki
   ko:
   ko_rr:
   zh-TW:
