--- a/data/cards/43129357.yaml
+++ b/data/cards/43129357.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>武者髑髏<rt>ムシャドクロ</rt></ruby>
-  ja_romaji: Raika no Mushadokuro
+  ja_romaji: Raika no Musha Dokuro
   ko:
   ko_rr:
   zh-TW:
