--- a/data/cards/52543404.yaml
+++ b/data/cards/52543404.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>鎧石竜<rt>ヨロイトカゲ</rt></ruby>
-  ja_romaji: Raika no Yoroitokage
+  ja_romaji: Raika no Yoroi Tokage
   ko:
   ko_rr:
   zh-TW:
