--- a/data/cards/08038143.yaml
+++ b/data/cards/08038143.yaml
@@ -130,6 +130,9 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Common
+  - set_number: DP29-SC015
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
