--- a/data/cards/47660516.yaml
+++ b/data/cards/47660516.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>RUM<rt>랭크 업 매직</rt></ruby>－바리언즈 포스
   ko_rr:
   zh-TW: 升階魔法－巴利安之力
-  zh-CN: 升阶魔法-异晶人的魔力
+  zh-CN: 升阶魔法－巴利安之力
 text:
   en: |-
     Target 1 face-up Xyz Monster you control; Special Summon from your Extra Deck, 1 "Number C" or "CXyz" monster with the same Type as that monster you control but 1 Rank higher, by using it as the Xyz Material. (This Special Summon is treated as an Xyz Summon. Xyz Materials attached to it also become Xyz Materials on the Summoned monster.) Then, if possible, detach 1 Xyz Material from a monster your opponent controls and attach it to the Summoned monster as an Xyz Material.
@@ -152,6 +152,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: DP29-SC014
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
