--- a/data/cards/92362073.yaml
+++ b/data/cards/92362073.yaml
@@ -103,6 +103,9 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Rare
+  - set_number: DP29-SC013
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
