--- a/data/cards/68396121.yaml
+++ b/data/cards/68396121.yaml
@@ -180,6 +180,9 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: DP29-SC012
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
