--- a/data/cards/88774734.yaml
+++ b/data/cards/88774734.yaml
@@ -107,6 +107,9 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Common
+  - set_number: DP29-SC010
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
