--- a/data/cards/89789152.yaml
+++ b/data/cards/89789152.yaml
@@ -86,6 +86,9 @@ sets:
     set_name: Mega Pack 04
     rarities:
     - Common
+  - set_number: DP29-SC016
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
