--- a/data/cards/yugipedia1054106.yaml
+++ b/data/cards/yugipedia1054106.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 银河眼时空源龙
 text:
   en: |-
     When a Dragon Xyz Monster declares an attack: Attach this card on the field to it as material. You can only use each of the following effects of "Galaxy-Eyes Tachyon Primal" once per turn. If a Dragon Xyz Monster is on the field (Quick Effect): You can Special Summon this card from your hand to either field. If this card is Normal or Special Summoned: Its owner adds 1 "Tachyon" Spell/Trap from their Deck to their hand.
@@ -24,7 +24,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的①②效果１回合仅可各使用１次。①：在自己・对手回合中，场上存在龙族超量怪兽的情况下可以发动。从手牌将此卡特殊召唤至自己或对手场上。②：此卡召唤・特殊召唤的情况下发动。此卡原本的持有者从自身的牌组将１张“时空”魔法・陷阱卡加入手牌。③：自己或对手的龙族超量怪兽的攻击宣言时发动。将场上的此卡作为该怪兽的超量素材。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -45,6 +46,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: DP29-SC001
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
