--- a/data/cards/yugipedia1054108.yaml
+++ b/data/cards/yugipedia1054108.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 时空云笼
 text:
   en: |-
     If this card is added to your hand, except by drawing it: You can Special Summon it. You can Tribute this card; Special Summon 1 "Tachyon" monster from your Deck or GY, except "Tachyon Cloudragon". If you Special Summon a Dragon Xyz Monster(s): You can target 1 of them; attach this card to it as material from the GY (if it was there when the monster was Summoned) or hand (even if not). You can only use each effect of "Tachyon Cloudragon" once per turn.
@@ -24,7 +24,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的①②③效果１回合仅可各使用１次。①：用抽牌以外的方法将此卡加入手牌的情况下可以发动。将此卡特殊召唤。②：解放此卡可以发动。从自己的牌组・墓地将“时空云笼”以外的１只“时空”怪兽特殊召唤。③：此卡存在于手牌・墓地，且自己将龙族超量怪兽特殊召唤的情况下，以其中１只为对象可以发动。将此卡作为该怪兽的超量素材。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -42,6 +43,10 @@ sets:
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DP29-SC002
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
