--- a/data/cards/yugipedia1054114.yaml
+++ b/data/cards/yugipedia1054114.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 歼灭的快子时空螺旋
 text:
   en: |-
     Activate 1 of these effects (but you can only use each effect of "Tachyon Spiral of Destruction" once per turn);
@@ -27,7 +27,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：可从以下效果中选择１个发动（此卡名的以下效果１回合仅可各选择１次）。●自己场上存在“银河”超量怪兽的情况下可以发动。将对手场上效果被无效化的表侧表示卡全部破坏。●以自己墓地“歼灭的快子时空螺旋”以外的１张“时空”卡为对象可以发动。将该卡加入手牌。●以自己墓地的１只龙族“编号”怪兽为对象可以发动。将该怪兽以守备表示特殊召唤。
 card_type: Spell
 property: Quick-Play
 series:
@@ -39,6 +40,10 @@ images:
 sets:
   ja:
   - set_number: DP29-JP005
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
+  zh-CN:
+  - set_number: DP29-SC005
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
 limit_regulation:
