--- a/data/cards/yugipedia1054116.yaml
+++ b/data/cards/yugipedia1054116.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 快子时空银河霸主
 text:
   en: |-
     If you control a "Galaxy-Eyes Tachyon Dragon" monster, you can activate this card from your hand. During the Battle Phase: Detach 1 material from your "Galaxy-Eyes" Xyz Monster; shuffle all monsters your opponent controls Normal or Special Summoned this turn into the Deck. If you control a "Number C" monster, this card's activation and effect cannot be negated. You can only activate 1 "Lord of the Tachyon Galaxy" per turn.
@@ -24,7 +24,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的卡１回合仅可发动１张。自己场上存在“银河眼时空龙”怪兽的情况下，此卡也可从手牌发动。①：在自己・对手的战斗阶段，去除自己场上的“银河眼”超量怪兽的１个超量素材可以发动（自己场上存在“混沌编号”怪兽的情况下，此卡的发动与效果不会被无效化）。将在此回合被召唤・特殊召唤的、对手场上的怪兽全部放回牌组。
 card_type: Trap
 property: Normal
 series:
@@ -36,6 +37,10 @@ images:
 sets:
   ja:
   - set_number: DP29-JP007
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
+  zh-CN:
+  - set_number: DP29-SC007
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
 limit_regulation:
