--- a/data/cards/yugipedia1054110.yaml
+++ b/data/cards/yugipedia1054110.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>無<rt>む</rt></ruby><ruby>限<rt>げん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>シュヴァルツシルド
-  ja_romaji: Mugenryū Shuvarutsushirudo
+  ja: <ruby>無<rt>む</rt></ruby><ruby>限<rt>げん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>シュヴァルツシルト
+  ja_romaji: Mugenryū Shuvarutsushiruto
   ko:
   ko_rr:
   zh-TW:
