--- a/data/rush/yugipedia1044912.yaml
+++ b/data/rush/yugipedia1044912.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have no other monsters on your field, reveal 1 Pyro, Aqua, or Thunder Type monster in your hand.
+    If you have no other monsters on your field, reveal 1 Pyro/Aqua/Thunder Type monster in your hand to your opponent.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, you can add to your hand 1 Pyro, Aqua, or Thunder Type monster from among the cards sent, with the same Level as [the Level of the monster revealed to meet the requirement].
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add to your hand 1 Pyro/Aqua/Thunder Type monster from among the cards sent, with the same Level as [the Level of the monster revealed to meet the requirement].
   de:
   es:
   fr:
