--- a/data/cards/yugipedia1054195.yaml
+++ b/data/cards/yugipedia1054195.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>祈<rt>いの</rt></ruby>りの<ruby>女<rt>じょ</rt></ruby><ruby>王<rt>おう</rt></ruby>－コスモクイーン
-  ja_romaji: Inori no Joō - Kosumo Kuīn
+  ja: <ruby>祈<rt>いの</rt></ruby>りの<ruby>女<rt>じょう</rt></ruby><ruby>王<rt>おう</rt></ruby>－コスモクイーン
+  ja_romaji: Inori no Jōō - Kosumo Kuīn
   ko:
   ko_rr:
   zh-TW:
