--- a/data/cards/35059553.yaml
+++ b/data/cards/35059553.yaml
@@ -110,6 +110,6 @@ sets:
     - Common
 limit_regulation:
   tcg: Forbidden
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 17841
 master_duel_rarity: SR
