--- a/data/cards/04031928.yaml
+++ b/data/cards/04031928.yaml
@@ -418,6 +418,6 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Limited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 469
 master_duel_rarity: UR
