--- a/data/cards/09674034.yaml
+++ b/data/cards/09674034.yaml
@@ -113,6 +113,6 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 992318
 master_duel_rarity: SR
