--- a/data/cards/24207889.yaml
+++ b/data/cards/24207889.yaml
@@ -230,6 +230,6 @@ sets:
     - Normal Parallel Rare
 limit_regulation:
   tcg: Limited
-  ocg: Semi-Limited
+  ocg: Limited
 yugipedia_page_id: 532132
 master_duel_rarity: UR
