--- a/data/cards/26400609.yaml
+++ b/data/cards/26400609.yaml
@@ -127,6 +127,6 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Forbidden
-  ocg: Forbidden
+  ocg: Limited
 yugipedia_page_id: 272621
 master_duel_rarity: UR
