--- a/data/cards/29301450.yaml
+++ b/data/cards/29301450.yaml
@@ -124,5 +124,5 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 993390
