--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -319,6 +319,6 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 572250
 master_duel_rarity: SR
