--- a/data/cards/61665245.yaml
+++ b/data/cards/61665245.yaml
@@ -103,6 +103,6 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Forbidden
-  ocg: Forbidden
+  ocg: Unlimited
 yugipedia_page_id: 533726
 master_duel_rarity: UR
