--- a/data/cards/66957584.yaml
+++ b/data/cards/66957584.yaml
@@ -116,6 +116,6 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Limited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 514552
 master_duel_rarity: UR
