--- a/data/cards/69610326.yaml
+++ b/data/cards/69610326.yaml
@@ -204,6 +204,6 @@ sets:
     - Ultimate Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 427895
 master_duel_rarity: R
