--- a/data/cards/69811710.yaml
+++ b/data/cards/69811710.yaml
@@ -113,6 +113,6 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 707554
 master_duel_rarity: UR
