--- a/data/cards/94677445.yaml
+++ b/data/cards/94677445.yaml
@@ -115,6 +115,6 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Limited
-  ocg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 585355
 master_duel_rarity: SR
