--- a/data/cards/yugipedia1054116.yaml
+++ b/data/cards/yugipedia1054116.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 快子时空银河霸主
 text:
   en: |-
-    If you control a "Galaxy-Eyes Tachyon Dragon" monster, you can activate this card from your hand. During the Battle Phase: Detach 1 material from your "Galaxy-Eyes" Xyz Monster; shuffle all monsters your opponent controls Normal or Special Summoned this turn into the Deck. If you control a "Number C" monster, this card's activation and effect cannot be negated. You can only activate 1 "Lord of the Tachyon Galaxy" per turn.
+    If you control a "Galaxy-Eyes Tachyon Dragon" monster, you can activate this card from your hand. During the Battle Phase: Detach 1 material from your "Galaxy-Eyes" Xyz Monster; shuffle all monsters your opponent controls that were Normal or Special Summoned this turn into the Deck. If you control a "Number C" monster, this card's activation and effect cannot be negated. You can only activate 1 "Lord of the Tachyon Galaxy" per turn.
   de:
   es:
   fr:
