--- a/data/rush/18701.yaml
+++ b/data/rush/18701.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/P001-KR002
+    set_name: Dragons Duel Tournament participation card
+    rarities:
+    - Ultra Rare
 is_translation_unofficial:
   name:
     en: true
