--- a/data/rush/15184.yaml
+++ b/data/rush/15184.yaml
@@ -96,4 +96,8 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Ultra Rare
+  - set_number: RD/P001-KR001
+    set_name: Dragons Duel Tournament prize card
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 714033
