--- a/rush.yaml
+++ b/rush.yaml
@@ -2429,6 +2429,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Ultra Rare
+  - set_number: RD/P001-KR001
+    set_name: Dragons Duel Tournament prize card
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 714033
 ---
 konami_id: 15185
@@ -98667,6 +98671,10 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/P001-KR002
+    set_name: Dragons Duel Tournament participation card
+    rarities:
+    - Ultra Rare
 is_translation_unofficial:
   name:
     en: true
