--- a/data/cards/07496001.yaml
+++ b/data/cards/07496001.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Lightning Overdrive
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LIOV-KR054
     set_name: Lightning Overdrive
