--- a/data/cards/25415161.yaml
+++ b/data/cards/25415161.yaml
@@ -98,6 +98,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: DAMA-KR071
     set_name: Dawn of Majesty
