--- a/data/cards/62849088.yaml
+++ b/data/cards/62849088.yaml
@@ -205,6 +205,10 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: DAMA-KR009
     set_name: Dawn of Majesty
