--- a/data/cards/93595154.yaml
+++ b/data/cards/93595154.yaml
@@ -116,6 +116,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LIOV-KR069
     set_name: Lightning Overdrive
