--- a/data/cards/99456344.yaml
+++ b/data/cards/99456344.yaml
@@ -123,6 +123,10 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: DAMA-KR007
     set_name: Dawn of Majesty
