--- a/data/cards/01906812.yaml
+++ b/data/cards/01906812.yaml
@@ -111,6 +111,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BLVO-KR038
     set_name: Blazing Vortex
