--- a/data/cards/02906250.yaml
+++ b/data/cards/02906250.yaml
@@ -42,7 +42,7 @@ atk: 1300
 def: 1200
 images:
 - index: 1
-  image: Grappler-KC01-JP-UR.png
+  image: Grappler-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: KC01-EN018
