--- a/data/cards/06855503.yaml
+++ b/data/cards/06855503.yaml
@@ -112,6 +112,10 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BODE-KR038
     set_name: Burst of Destiny
