--- a/data/cards/23499963.yaml
+++ b/data/cards/23499963.yaml
@@ -94,6 +94,10 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BLVO-KR054
     set_name: Blazing Vortex
