--- a/data/cards/29601381.yaml
+++ b/data/cards/29601381.yaml
@@ -85,6 +85,10 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BLVO-KR009
     set_name: Blazing Vortex
