--- a/data/cards/34995106.yaml
+++ b/data/cards/34995106.yaml
@@ -123,6 +123,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LIOV-KR055
     set_name: Lightning Overdrive
