--- a/data/cards/38105306.yaml
+++ b/data/cards/38105306.yaml
@@ -32,7 +32,7 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: LifeShaver-KC01-JP-UR.png
+  image: LifeShaver-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: KC01-EN002
