--- a/data/cards/40352445.yaml
+++ b/data/cards/40352445.yaml
@@ -104,6 +104,10 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LIOV-KR032
     set_name: Lightning Overdrive
