--- a/data/cards/48285768.yaml
+++ b/data/cards/48285768.yaml
@@ -87,6 +87,10 @@ sets:
     set_name: Lightning Overdrive
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LIOV-KR041
     set_name: Lightning Overdrive
