--- a/data/cards/60884672.yaml
+++ b/data/cards/60884672.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BLVO-KR055
     set_name: Blazing Vortex
