--- a/data/cards/72272462.yaml
+++ b/data/cards/72272462.yaml
@@ -115,6 +115,10 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: DAMA-KR034
     set_name: Dawn of Majesty
