--- a/data/cards/81555617.yaml
+++ b/data/cards/81555617.yaml
@@ -96,6 +96,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BODE-KR011
     set_name: Burst of Destiny
