--- a/data/cards/82738008.yaml
+++ b/data/cards/82738008.yaml
@@ -127,6 +127,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BODE-KR057
     set_name: Burst of Destiny
