--- a/data/cards/83199011.yaml
+++ b/data/cards/83199011.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BLVO-KR068
     set_name: Blazing Vortex
