--- a/data/cards/87746184.yaml
+++ b/data/cards/87746184.yaml
@@ -140,6 +140,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LIOV-KR033
     set_name: Lightning Overdrive
