--- a/data/cards/96378317.yaml
+++ b/data/cards/96378317.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BLVO-KR056
     set_name: Blazing Vortex
