--- a/data/cards/99543666.yaml
+++ b/data/cards/99543666.yaml
@@ -113,6 +113,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: DAMA-KR053
     set_name: Dawn of Majesty
