--- a/data/cards/30113682.yaml
+++ b/data/cards/30113682.yaml
@@ -42,7 +42,7 @@ atk: 2200
 def: 1500
 images:
 - index: 1
-  image: JudgeMan-LCKC-EN-UR-1E.png
+  image: JudgeMan-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: DPKB-EN003
