--- a/data/cards/52675689.yaml
+++ b/data/cards/52675689.yaml
@@ -15,7 +15,8 @@ name:
   zh-CN: 诱发暗黑长眠的路西法
 text:
   en: |-
-    When this monster is summoned (excluding Special Summon), select 1 of your opponent's monsters. As long as this card remains face-up on the field, the selected monster cannot attack.
+    If this card is Normal or Flip Summoned: Target 1 monster your opponent controls; this card gains the following effect.
+    ● While this card is in the Monster Zone, that monster cannot attack.
   de: |-
     Wenn diese Karte mit einer Normalbeschwörung oder Flippbeschwörung beschworen wird, wähle 1 Monster deines Gegners. Solange diese Karte offen auf dem Spielfeld liegt, kann das ausgewählte Monster nicht angreifen.
   es: |-
@@ -43,7 +44,7 @@ atk: 1500
 def: 1800
 images:
 - index: 1
-  image: InvitationtoaDarkSleep-PSV-EN-C-UE-25thAnniversaryEdition.png
+  image: InvitationtoaDarkSleep-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: PSV-EN082
