--- a/data/cards/62397231.yaml
+++ b/data/cards/62397231.yaml
@@ -44,7 +44,7 @@ series:
 - Gem Dragon
 images:
 - index: 1
-  image: Hyozanryu-SRL-EN-R-UE-25thAnniversaryEdition.png
+  image: Hyozanryu-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: SKE-011
