--- a/data/cards/02111707.yaml
+++ b/data/cards/02111707.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "X-Head Cannon" + "Y-Dragon Head"
-    Must first be Special Summoned (from your Extra Deck) by banishing the above cards you control. (You do not use "Polymerization".) Cannot be Special Summoned from the GY. You can discard 1 card, then target 1 face-up Spell/Trap your opponent controls; destroy that target.
+    Must first be Special Summoned (from your Extra Deck) by banishing the above cards you control. Cannot be Special Summoned from the GY. You can discard 1 card, then target 1 face-up Spell/Trap your opponent controls; destroy that target.
   de: |-
     „X-Kopfkanone“ + „Y-Drachenkopf“
     Muss erst als Spezialbeschwörung (von deinem Extra Deck) beschworen werden, indem du die oben aufgeführten Karten verbannst, die du kontrollierst. („Polymerisation“ wird nicht verwendet.) Kann nicht als Spezialbeschwörung vom Friedhof beschworen werden. Du kannst 1 Karte abwerfen und dann 1 offene/n Zauber/Falle wählen, den oder die dein Gegner kontrolliert; zerstöre das gewählte Ziel.
@@ -55,7 +55,7 @@ series:
 - A-to-Z
 images:
 - index: 1
-  image: XYDragonCannon-KC01-JP-UR.png
+  image: XYDragonCannon-KC01-EN-UR-UE.png
   illustration: XYDragonCannon-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: XYDragonCannon-SBCB-EN-C-1E.png
