--- a/data/cards/05053103.yaml
+++ b/data/cards/05053103.yaml
@@ -42,7 +42,7 @@ atk: 1700
 def: 1000
 images:
 - index: 1
-  image: BattleOx-SS02-EN-C-1E.png
+  image: BattleOx-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: SKE-002
