--- a/data/cards/06285791.yaml
+++ b/data/cards/06285791.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 邪恶蠕虫兽
 text:
   en: |-
-    This face-up card on the field is returned to the owner's hand during the End Phase of your turn.
+    Once per turn, during your End Phase: Return this face-up card to the hand.
   de: |-
     Diese offene Karte auf dem Spielfeld kehrt während der End Phase deines Spielzugs auf die Hand ihres Besitzers zurück.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Worm
 images:
 - index: 1
-  image: TheWickedWormBeast-GLD4-EN-C-LE.png
+  image: TheWickedWormBeast-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: DB2-EN090
