--- a/data/cards/17985575.yaml
+++ b/data/cards/17985575.yaml
@@ -42,7 +42,7 @@ atk: 1200
 def: 1100
 images:
 - index: 1
-  image: LordofD-STP1-EN-SR-UE.png
+  image: LordofD-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: SKE-016
