--- a/data/cards/48386462.yaml
+++ b/data/cards/48386462.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Naite Hototogisu
   ko: 우는 두견새
   ko_rr: U-neun Dugyeonsae
-  zh-TW:
+  zh-TW: 啼矣杜鵑
   zh-CN: 啼矣杜鹃
 text:
   en: |-
@@ -60,7 +60,12 @@ text:
     ●이 카드를 파괴한다. 그 후, 자신은 1장 드로우한다.
     ●자신의 패를 1장 고르고 버린다. 그 후, 자신은 1장 드로우한다.
     ●이 턴의 엔드 페이즈에, 자신은 1장 드로우한다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的效果１回合僅限使用１次。
+    ①：可從以下效果選擇１個發動。
+    ●破壞此卡。其後，我方抽１張牌。
+    ●選擇我方的１張手牌捨棄。其後，我方抽１張牌。
+    ●此回合的結束階段，我方抽１張牌。
   zh-CN: |-
     此卡名的效果１回合仅可使用１次。
     ①：可从以下效果中选择１个发动。
@@ -121,3 +126,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 930311
+master_duel_rarity: SR
