--- a/data/cards/54912977.yaml
+++ b/data/cards/54912977.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 魔法神灯
 text:
   en: |-
-    During your Main Phase: You can Special Summon "La Jinn the Mystical Genie of the Lamp" from your hand. This card must be face-up on the field to activate and to resolve this effect. Before damage calculation, if this card is being attacked by an opponent's monster, and was face-down at the start of the Damage Step: You can target 1 monster your opponent controls, except the attacking monster; the attacking monster attacks it instead, and you proceed to damage calculation.
+    During your Main Phase: You can Special Summon "La Jinn the Mystical Genie of the Lamp" from your hand. This card must be face-up on the field to activate and to resolve this effect. Before damage calculation, if this card is being attacked by an opponent's monster, and was face-down at the start of the Damage Step: You can target 1 monster your opponent controls, except the attacking monster; change the attack target to that opponent's monster and perform damage calculation.
   de: |-
     Während deiner Main Phase: Du kannst „Mystischer Jinn der Lampe“ als Spezialbeschwörung von deiner Hand beschwören. Diese Karte muss offen auf dem Spielfeld liegen, um diesen Effekt zu aktivieren und aufzulösen. Vor der Schadensberechnung, falls diese Karte von einem Monster deines Gegners angegriffen wird und zu Beginn des Damage Steps verdeckt lag: Du kannst 1 Monster wählen, das dein Gegner kontrolliert, außer dem angreifenden Monster; das angreifende Monster greift stattdessen das gewählte Monster an und führe die Schadensberechnung durch.
   es: |-
@@ -42,7 +42,7 @@ atk: 900
 def: 1400
 images:
 - index: 1
-  image: AncientLamp-LDK2-EN-C-1E.png
+  image: AncientLamp-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: SP2-EN001
