--- a/data/cards/62651957.yaml
+++ b/data/cards/62651957.yaml
@@ -44,7 +44,7 @@ series:
 - A-to-Z
 images:
 - index: 1
-  image: XHeadCannon-KC01-JP-UR.png
+  image: XHeadCannon-KC01-EN-UR-UE.png
   illustration: XHeadCannon-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: XHeadCannon-SBCB-EN-C-1E.png
