--- a/data/cards/64500000.yaml
+++ b/data/cards/64500000.yaml
@@ -49,7 +49,7 @@ series:
 - A-to-Z
 images:
 - index: 1
-  image: ZMetalTank-SBCB-EN-C-1E.png
+  image: ZMetalTank-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: DR1-EN061
