--- a/data/cards/97534104.yaml
+++ b/data/cards/97534104.yaml
@@ -9,9 +9,9 @@ name:
   pt: Batata Mística
   ja: キラー・ポテト
   ja_romaji: Kirā Poteto
-  ko:
+  ko: 킬러 포테이토
   ko_rr:
-  zh-TW:
+  zh-TW: 殺人馬鈴薯
   zh-CN: 杀手土豆
 text:
   en: |-
@@ -28,8 +28,10 @@ text:
     Se este card no campo for destruído por um efeito de card e enviado para o Cemitério: você pode Invocar por Invocação-Especial 1 monstro de TREVAS com 1500 ou menos de ATK do seu Deck em Posição de Ataque, exceto "Batata Mística".
   ja: |-
     ①：フィールドのこのカードが効果で破壊され墓地へ送られた場合に発動できる。「キラー・ポテト」を除く、攻撃力１５００以下の闇属性モンスター１体をデッキから攻撃表示で特殊召喚する。
-  ko:
-  zh-TW:
+  ko: |-
+    ①: 필드의 이 카드가 효과로 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. "킬러 포테이토"가 아닌, 공격력 1500 이하의 어둠 속성 몬스터 1장을 덱에서 공격 표시로 특수 소환한다.
+  zh-TW: |-
+    ①：可在場上的此卡因效果被破壞送至墓地的狀況下發動。從牌組以攻擊表示特殊召喚１隻「殺人馬鈴薯」以外，攻擊力１５００以下的闇屬性怪獸。
   zh-CN: |-
     ①：场上的这张卡被效果破坏并送入墓地的场合可以发动。从卡组将1只除「キラー・ポテト／杀手土豆」之外的、攻击力1500以下的暗属性怪兽以攻击表示特殊召唤。
 card_type: Monster
@@ -76,3 +78,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806659
+master_duel_rarity: UR
