--- a/data/cards/22046459.yaml
+++ b/data/cards/22046459.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: Megamorph-SRL-EN-UR-UE-25thAnniversaryEdition.png
+  image: Megamorph-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: SKE-037
