--- a/data/cards/86871614.yaml
+++ b/data/cards/86871614.yaml
@@ -38,7 +38,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: Cloning-EGO1-EN-C-1E.png
+  image: Cloning-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: DPKB-EN040
