--- a/data/cards/98299011.yaml
+++ b/data/cards/98299011.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 圣精灵的祝福
 text:
   en: |-
-    Increase your Life Points by 300 points for each monster on the field.
+    Gain 300 LP for each monster on the field.
   de: |-
     Erhöhe deine Life Points für jedes Monster auf dem Spielfeld um 300 Punkte.
   es: |-
@@ -38,7 +38,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: GiftofTheMysticalElf-PSV-EN-C-UE-25thAnniversaryEdition.png
+  image: GiftofTheMysticalElf-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: SKE-044
