--- a/data/cards/23265313.yaml
+++ b/data/cards/23265313.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: CostDown-STAX-EN-C-1E.png
+  image: CostDown-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: DR1-EN215
