--- a/data/cards/55713623.yaml
+++ b/data/cards/55713623.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: Shrink-SBCB-EN-C-1E.png
+  image: Shrink-KC01-EN-UR-UE.png
 sets:
   en:
   - set_number: STON-ENSE2
