--- a/data/cards/yugipedia1054461.yaml
+++ b/data/cards/yugipedia1054461.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If your opponent controls more monsters than you do, you can Special Summon this card (from your hand). You can only Special Summon "Ancient Gear Statue" once per turn this way. You can Tribute this card; Special Summon 1 "Ancient Gear Golem", or 1 monster that mentions it, from your hand or Deck, except "Ancient Gear Statue", ignoring its Summoning conditions.
+    If your opponent controls more monsters than you do, you can Special Summon this card (from your hand). You can only Special Summon "Ancient Gear Statue" once per turn this way. You can Tribute this card; Special Summon 1 "Ancient Gear Golem", or 1 monster that mentions it, from your hand or Deck, except "Ancient Gear Statue", ignoring its Summoning conditions. You can only use this effect of "Ancient Gear Statue" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Ancient Gear
 images:
 - index: 1
-  image: AncientGearStatue-OW.png
+  image: AncientGearStatue-OW-2.png
 sets:
   ja:
   - set_number: AC04-JP0??
