--- a/data/cards/72443568.yaml
+++ b/data/cards/72443568.yaml
@@ -46,6 +46,10 @@ series:
 images:
 - index: 1
   image: SilentMagicianLV8-LDK2-EN-C-1E.png
+  illustration: SilentMagicianLV8-MADU-EN-VG-artwork.png
+- index: 2
+  image: SilentMagicianLV8-OW.png
+  illustration: SilentMagicianLV8-OW.png
 sets:
   en:
   - set_number: NTR-EN002
