--- a/rush.yaml
+++ b/rush.yaml
@@ -141162,3 +141162,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1053557
+---
+konami_id:
+name:
+  en: Invitation to a Delirious Dream
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>夢<rt>む</rt></ruby><ruby>中<rt>ちゅう</rt></ruby>の<ruby>誘<rt>いざな</rt></ruby>い
+  ja_romaji: Muchū no Izanai
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster, place 1 monster from your field and 1 card from your hand on the bottom of the owner's Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Take control of 1 face-up Level 8 or lower monster on your opponent's field, except a Maximum Monster. While the monster you took control of by this effect is face-up on the field, it cannot attack or activate its effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: InvitationtoaDeliriousDream-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP066
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1054494
