--- a/data/cards/07593748.yaml
+++ b/data/cards/07593748.yaml
@@ -109,6 +109,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Ultra Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: DP22-KR034
     set_name: 'Duelist Pack: Legend Duelist 5'
