--- a/data/cards/33776843.yaml
+++ b/data/cards/33776843.yaml
@@ -116,6 +116,9 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: PP09-KR010
     set_name: Premium Pack Vol.9
