--- a/data/cards/88120966.yaml
+++ b/data/cards/88120966.yaml
@@ -126,6 +126,9 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: CPZ1-KR019
     set_name: 'Collectors Pack: ZEXAL Version'
