--- a/data/cards/29216967.yaml
+++ b/data/cards/29216967.yaml
@@ -77,6 +77,9 @@ sets:
     set_name: 'Collectors Pack: ZEXAL Version'
     rarities:
     - Common
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: CPZ1-KR008
     set_name: 'Collectors Pack: ZEXAL Version'
