--- a/data/cards/41175645.yaml
+++ b/data/cards/41175645.yaml
@@ -140,6 +140,9 @@ sets:
     set_name: Prismatic God Box
     rarities:
     - Millennium Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: DP17-KR002
     set_name: "Duelist Pack: Pharaoh's Memories"
