--- a/data/cards/79086452.yaml
+++ b/data/cards/79086452.yaml
@@ -98,6 +98,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Super Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: DP22-KR036
     set_name: 'Duelist Pack: Legend Duelist 5'
