--- a/data/cards/97520532.yaml
+++ b/data/cards/97520532.yaml
@@ -92,6 +92,9 @@ sets:
     - Common
     - Ultra Rare
     - Secret Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: PP14-KRA04
     set_name: Premium Pack Vol.14 1st Wave
