--- a/data/cards/55349196.yaml
+++ b/data/cards/55349196.yaml
@@ -44,6 +44,8 @@ attribute: EARTH
 level: 6
 atk: 1600
 def: 1200
+series:
+- King Rex
 images:
 - index: 1
   image: DoubleHeadedDinoKingRex-DUNE-EN-C-1E.png
