--- a/data/cards/81743801.yaml
+++ b/data/cards/81743801.yaml
@@ -42,6 +42,8 @@ attribute: EARTH
 level: 9
 atk: 3200
 def: 1200
+series:
+- King Rex
 images:
 - index: 1
   image: MightyDinoKingRex-DUNE-EN-SR-1E.png
