--- a/data/cards/94119974.yaml
+++ b/data/cards/94119974.yaml
@@ -40,6 +40,8 @@ attribute: EARTH
 level: 4
 atk: 1600
 def: 1200
+series:
+- King Rex
 images:
 - index: 1
   image: TwoHeadedKingRex-SBTK-EN-C-LE.png
