--- a/rush.yaml
+++ b/rush.yaml
@@ -139682,6 +139682,128 @@ yugipedia_page_id: 1044907
 ---
 konami_id:
 name:
+  en: Dark Matter Enigmata
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダークマター・エニグマータ
+  ja_romaji: Dākumatā Enigumāta
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 0
+def: 0
+series:
+- Dark Matter
+images:
+- index: 1
+  image: DarkMatterEnigmata-OW.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP0??
+    set_name: Burst Rex of Awakening
+    rarities:
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044908
+---
+konami_id:
+name:
+  en: Dark Matter Cradoll
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダークマター・クレイドール
+  ja_romaji: Dākumatā Kureidōru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: DARK
+level: 4
+atk: 1400
+def: 1300
+series:
+- Dark Matter
+images:
+- index: 1
+  image: DarkMatterCradoll-OW.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP0??
+    set_name: Burst Rex of Awakening
+    rarities:
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044910
+---
+konami_id:
+name:
   en: Chemispet Parakeet
   de:
   es:
