--- a/data/rush/yugipedia1044911.yaml
+++ b/data/rush/yugipedia1044911.yaml
@@ -1,20 +1,20 @@
 konami_id:
 name:
-  en: Dark Matter Craydoll
+  en: Dark Matter Hazardoll
   de:
   es:
   fr:
   it:
   pt:
-  ja: ダークマター・クレイドール
-  ja_romaji: Dākumatā Kureidōru
+  ja: ダークマター・ハザードール
+  ja_romaji: Dākumatā Hazādōru
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    Pay 500 LP.
+    During your Main Phase this card was Normal or Special Summoned, send the top 3 cards of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card's name becomes "Dark Matter Mist" this turn. Then, you can add 1 "Fusion" from your Graveyard to your hand.
+    This card's name becomes "Dark Matter Mist" this turn. Then, you can add 1 "Dark Matter Craydoll" or 1 "Dark Matter Lockdoll" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -39,17 +39,17 @@ effect:
 card_type: Monster
 monster_type_line: Galaxy / Effect
 attribute: DARK
-level: 4
-atk: 1400
+level: 5
+atk: 1800
 def: 1300
 series:
 - Dark Matter
 images:
 - index: 1
-  image: DarkMatterCraydoll-RDKP17-JP-OP.png
+  image: DarkMatterHazardoll-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP023
+  - set_number: RD/KP17-JP026
     set_name: Burst Rex of Awakening
     rarities:
     - Super Rare
@@ -59,4 +59,4 @@ is_translation_unofficial:
     en: true
   text:
     en: true
-yugipedia_page_id: 1044910
+yugipedia_page_id: 1044911
