--- a/data/rush/yugipedia1054594.yaml
+++ b/data/rush/yugipedia1054594.yaml
@@ -1,20 +1,20 @@
 konami_id:
 name:
-  en: Dark Matter Craydoll
+  en: Dark Matter Deadcheer
   de:
   es:
   fr:
   it:
   pt:
-  ja: ダークマター・クレイドール
-  ja_romaji: Dākumatā Kureidōru
+  ja: ダークマター・デッドエール
+  ja_romaji:
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    Pay 500 LP.
+    During the turn you Normal Summoned this card.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card's name becomes "Dark Matter Mist" this turn. Then, you can add 1 "Fusion" from your Graveyard to your hand.
+    Send 1 monster from your field to the Graveyard. Then, you can Special Summon 1 Level 5 Galaxy Type monster with 1300 DEF from your Graveyard to your field in face-up Attack Position.
   de:
   es:
   fr:
@@ -39,24 +39,23 @@ effect:
 card_type: Monster
 monster_type_line: Galaxy / Effect
 attribute: DARK
-level: 4
-atk: 1400
+level: 2
+atk: 400
 def: 1300
 series:
 - Dark Matter
 images:
 - index: 1
-  image: DarkMatterCraydoll-RDKP17-JP-OP.png
+  image: DarkMatterDeadcheer-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP023
+  - set_number: RD/KP17-JP020
     set_name: Burst Rex of Awakening
     rarities:
-    - Super Rare
-    - Secret Rare
+    - Rare
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
-yugipedia_page_id: 1044910
+yugipedia_page_id: 1054594
