--- a/data/rush/yugipedia1054599.yaml
+++ b/data/rush/yugipedia1054599.yaml
@@ -1,20 +1,20 @@
 konami_id:
 name:
-  en: Dark Matter Craydoll
+  en: Dark Matter Knight
   de:
   es:
   fr:
   it:
   pt:
-  ja: ダークマター・クレイドール
-  ja_romaji: Dākumatā Kureidōru
+  ja: ダークマター・ナイト
+  ja_romaji:
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    Pay 500 LP.
+    None
   de:
   es:
   fr:
@@ -24,9 +24,11 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Continuous
 effect:
   en: |-
-    This card's name becomes "Dark Matter Mist" this turn. Then, you can add 1 "Fusion" from your Graveyard to your hand.
+    This card gains ATK equal to [the total number of face-up Fusion Monsters on your field and face-down monsters on your field] x 500.
   de:
   es:
   fr:
@@ -39,24 +41,23 @@ effect:
 card_type: Monster
 monster_type_line: Galaxy / Effect
 attribute: DARK
-level: 4
-atk: 1400
+level: 5
+atk: 1800
 def: 1300
 series:
 - Dark Matter
 images:
 - index: 1
-  image: DarkMatterCraydoll-RDKP17-JP-OP.png
+  image: DarkMatterKnight-RDKP17-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP17-JP023
+  - set_number: RD/KP17-JP025
     set_name: Burst Rex of Awakening
     rarities:
-    - Super Rare
-    - Secret Rare
+    - Common
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
-yugipedia_page_id: 1044910
+yugipedia_page_id: 1054599
