--- a/rush.yaml
+++ b/rush.yaml
@@ -141569,7 +141569,7 @@ name:
   it:
   pt:
   ja: ダークマター・デッドエール
-  ja_romaji:
+  ja_romaji: Dākumatā Deddoēru
   ko:
   ko_rr:
   zh-TW:
@@ -141631,7 +141631,7 @@ name:
   it:
   pt:
   ja: ダークマター・ジェリー
-  ja_romaji:
+  ja_romaji: Dākumatā Jerī
   ko:
   ko_rr:
   zh-TW:
@@ -141693,7 +141693,7 @@ name:
   it:
   pt:
   ja: ダークマター・ストリング
-  ja_romaji:
+  ja_romaji: Dākumatā Sutoringu
   ko:
   ko_rr:
   zh-TW:
@@ -141755,7 +141755,7 @@ name:
   it:
   pt:
   ja: ダークマター・ナイト
-  ja_romaji:
+  ja_romaji: Dākumatā Naito
   ko:
   ko_rr:
   zh-TW:
@@ -141819,7 +141819,7 @@ name:
   it:
   pt:
   ja: ダークマター・フレイヤ
-  ja_romaji:
+  ja_romaji: Dākumatā Fureiya
   ko:
   ko_rr:
   zh-TW:
@@ -141881,7 +141881,7 @@ name:
   it:
   pt:
   ja: ダークマター・エニグナイト・ズウィーガー
-  ja_romaji:
+  ja_romaji: Dākumatā Enigunaito Zuwīgā
   ko:
   ko_rr:
   zh-TW:
@@ -141947,3 +141947,119 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1054601
+---
+konami_id:
+name:
+  en: Dark Matter Storm
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダークマター・ストーム
+  ja_romaji: Dākumatā Sutōmu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 2 face-down monsters from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all Spell/Trap Cards on your opponent's field. You can only attack with DARK Attribute Galaxy Type Effect Monsters this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Dark Matter
+images:
+- index: 1
+  image: DarkMatterStorm-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP056
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1054602
+---
+konami_id:
+name:
+  en: Dark Matter Force
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダークマター・フォース
+  ja_romaji: Dākumatā Fōsu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up "Dark Matter Enigmata" or "Dark Matter Enigknight Sieger" on your field gains ATK equal to [the original ATK of the face-up monster with the highest original ATK on your opponent's field] until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Dark Matter
+images:
+- index: 1
+  image: DarkMatterForce-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP057
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1054603
