--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -25,21 +25,30 @@
 - yugipedia: 10276
   fake_password: 10000100
 ## Prereleases
-# Fire King Consort Ulkanix
-- yugipedia: 1033044
-  fake_password: 100295801
-# Ancient Gear Dragon
-- yugipedia: 1044527
-  fake_password: 100200252
+# Cursed Fire King Doom Burst
+- yugipedia: 1050416
+  fake_password: 100200245
+# Infernity Queen
+- yugipedia: 1050414
+  fake_password: 100200246
+# Bombing Beast Fire Bomber
+- yugipedia: 1050415
+  fake_password: 100200247
+# Galaxy War Drake
+- yugipedia: 1050253
+  fake_password: 100200253
+# Complete File: Story of White
+- set_abbreviation: CF01
+  fake_password_range: 100436300
 # Legacy of Destruction
 - set_abbreviation: LEDE
   fake_password_range: 101204000
 # Infinite Forbidden
 - set_abbreviation: INFO
   fake_password_range: 101205000
-# The Valuable Book EX 4 promotional cards
-- set_abbreviation: VX04
-  fake_password_range: 100436000
 # Duelist Pack: Duelists of Brilliance
 - set_abbreviation: DP29
   fake_password_range: 100437000
+# Animation Chronicle 2024
+- set_abbreviation: AC04
+  fake_password_range: 100305000
