--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5674,6 +5674,18 @@
   ko_rr: Sanggeom
   zh-TW:
   zh-CN:
+- en: Multchummy
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マルチャミー
+  ja_romaji: Maruchamī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Drytron
   de: Drytron
   es: Drytron
