--- a/rush.yaml
+++ b/rush.yaml
@@ -142063,3 +142063,136 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1054603
+---
+konami_id:
+name:
+  en: Dragonic Domination
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ドラゴニック・ドミネーション
+  ja_romaji: Doragonikku Dominēshon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Inflict 400 damage to your opponent. Then, if you have a face-up Level 7 or higher Dragon Type monster on your field, you can destroy 1 face-up Level 8 or lower Effect Monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: DragonicDomination-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP064
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1054731
+---
+konami_id:
+name:
+  en: Blue-Eyes Blazing Bright Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>青眼の激煌龍<rt>ブルーアイズ・ブレイジング・ブライト・ドラゴン</rt></ruby>
+  ja_romaji: Burūaizu Bureijingu Buraito Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 500 ATK until the end of your opponent's next turn. Then, if you have "Engine of Destruction" in your Graveyard, you can destroy 1 monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion / Effect
+attribute: LIGHT
+level: 10
+atk: 3000
+def: 3000
+materials:
+  en: |-
+    "Blue-Eyes White Dragon" + 1 Level 8 LIGHT Attribute Dragon Type monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Blue-Eyes
+images:
+- index: 1
+  image: BlueEyesBlazingBrightDragon-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP050
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1054732
