--- a/rush.yaml
+++ b/rush.yaml
@@ -140256,6 +140256,64 @@ yugipedia_page_id: 1044918
 ---
 konami_id:
 name:
+  en: Jest of the Cosmos Princess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: コスモス<ruby>姫<rt>ひめ</rt></ruby>のお<ruby>戯<rt>たわむ</rt></ruby>れ
+  ja_romaji: Kosumosu Hime no Otawamure
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 3 cards from your hand to the Graveyard, including 2 monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy up to 2 cards on your opponent's field. Then, if your opponent has 2 or more cards on their field, you can draw 2 cards.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: JestoftheCosmosPrincess-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP058
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044919
+---
+konami_id:
+name:
   en: Bluetech Burst Rex
   de:
   es:
@@ -141136,7 +141194,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    Equip this card to 1 face-up monster on your field.
   de:
   es:
   fr:
@@ -141148,7 +141206,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    The equipped monster gains ATK/DEF equal to [the number of Spell/Trap Cards on your field] x 500.
   de:
   es:
   fr:
