--- a/data/cards/05758500.yaml
+++ b/data/cards/05758500.yaml
@@ -267,6 +267,10 @@ sets:
     rarities:
     - Common
     - Gold Rare
+  - set_number: AE20-KRS04
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Secret Rare
   zh-TW:
   - set_number: SP03-TC041
     set_name: Starter Pack Volume 3
