--- a/data/cards/47297616.yaml
+++ b/data/cards/47297616.yaml
@@ -122,6 +122,14 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: AE20-KR008
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS08
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: CL02-SC181
     set_name: Classic Pack 02
