--- a/data/cards/84478195.yaml
+++ b/data/cards/84478195.yaml
@@ -113,6 +113,10 @@ sets:
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
     - Common
+  - set_number: AE20-KRS01
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: TM02-SC079
     set_name: 'Theme Pack: Undead Rondo'
