--- a/data/cards/89617515.yaml
+++ b/data/cards/89617515.yaml
@@ -107,6 +107,10 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: AE20-KR002
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP5-SC027
     set_name: Mega Pack 05
