--- a/data/cards/01225009.yaml
+++ b/data/cards/01225009.yaml
@@ -120,6 +120,10 @@ sets:
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
+  - set_number: AE20-KRS02
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: DBTM-SC017
     set_name: 'Deck Build Pack: Tactical Masters'
