--- a/data/cards/01906812.yaml
+++ b/data/cards/01906812.yaml
@@ -124,6 +124,14 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: AE20-KR010
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS10
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: MGP5-SC135
     set_name: Mega Pack 05
