--- a/data/cards/04810828.yaml
+++ b/data/cards/04810828.yaml
@@ -187,6 +187,14 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Rare
+  - set_number: AE20-KR019
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS19
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: DBAD-SC052
     set_name: 'Deck Build Pack: Amazing Defenders'
