--- a/data/cards/06327734.yaml
+++ b/data/cards/06327734.yaml
@@ -81,6 +81,14 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Rare
+  - set_number: AE20-KR009
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS09
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: MGP8-SC137
     set_name: Mega Pack 08
