--- a/data/cards/11110218.yaml
+++ b/data/cards/11110218.yaml
@@ -99,6 +99,14 @@ sets:
     set_name: World Premiere Pack 2021
     rarities:
     - Rare
+  - set_number: AE20-KR020
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS20
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: 23SP-SC222
     set_name: Entry Pack 2023 Vol.2
