--- a/data/cards/23401839.yaml
+++ b/data/cards/23401839.yaml
@@ -291,6 +291,14 @@ sets:
     set_name: Expansion Pack Vol.1
     rarities:
     - Common
+  - set_number: AE20-KR006
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS06
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
