--- a/data/cards/26435595.yaml
+++ b/data/cards/26435595.yaml
@@ -139,6 +139,14 @@ sets:
     set_name: World Premiere Pack 2022
     rarities:
     - Rare
+  - set_number: AE20-KR021
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS21
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: SD29-SCP09
     set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
