--- a/data/cards/26866984.yaml
+++ b/data/cards/26866984.yaml
@@ -124,6 +124,14 @@ sets:
     set_name: Eternity Code
     rarities:
     - Rare
+  - set_number: AE20-KR011
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS11
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: MGP4-SC125
     set_name: Mega Pack 04
