--- a/data/cards/31320433.yaml
+++ b/data/cards/31320433.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: Yu-Gi-Oh! ZEXAL Volume 4 promotional card
     rarities:
     - Ultra Rare
+  - set_number: AE20-KRS03
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
