--- a/data/cards/36021814.yaml
+++ b/data/cards/36021814.yaml
@@ -229,6 +229,14 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  - set_number: AE20-KR005
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS05
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: TM02-SC012
     set_name: 'Theme Pack: Undead Rondo'
