--- a/data/cards/37626500.yaml
+++ b/data/cards/37626500.yaml
@@ -135,6 +135,14 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Common
+  - set_number: AE20-KR013
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS13
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: DBAD-SC057
     set_name: 'Deck Build Pack: Amazing Defenders'
