--- a/data/cards/39402797.yaml
+++ b/data/cards/39402797.yaml
@@ -121,6 +121,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: AE20-KR003
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: LEDE-SC111
     set_name: Legacy of Destruction
