--- a/data/cards/40164421.yaml
+++ b/data/cards/40164421.yaml
@@ -95,6 +95,10 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Common
+  - set_number: AE20-KR001
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: LEDE-SC097
     set_name: Legacy of Destruction
