--- a/data/cards/56099748.yaml
+++ b/data/cards/56099748.yaml
@@ -175,6 +175,14 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: AE20-KR015
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS15
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: MGP7-SC070
     set_name: Mega Pack 07
