--- a/data/cards/62895219.yaml
+++ b/data/cards/62895219.yaml
@@ -132,6 +132,14 @@ sets:
     set_name: Crossed Souls
     rarities:
     - Common
+  - set_number: AE20-KR007
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Super Rare
+  - set_number: AE20-KRS07
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: LEDE-SC090
     set_name: Legacy of Destruction
