--- a/data/cards/73082255.yaml
+++ b/data/cards/73082255.yaml
@@ -132,6 +132,14 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: AE20-KR016
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS16
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: MGP7-SC032
     set_name: Mega Pack 07
