--- a/data/cards/83266092.yaml
+++ b/data/cards/83266092.yaml
@@ -123,6 +123,14 @@ sets:
     set_name: Raging Battle
     rarities:
     - Super Rare
+  - set_number: AE20-KR018
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS18
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-TW:
   - set_number: SP03-TC056
     set_name: Starter Pack Volume 3
