--- a/data/cards/94677445.yaml
+++ b/data/cards/94677445.yaml
@@ -106,6 +106,14 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: AE20-KR014
+    set_name: Advanced Event Pack 2024 Vol.1 Version 1
+    rarities:
+    - Common
+  - set_number: AE20-KRS14
+    set_name: Advanced Event Pack 2024 Vol.1 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: MGP3-SC072
     set_name: Mega Pack 03
