--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -39,6 +39,9 @@ property: Normal
 images:
 - index: 1
   image: OneforOne-AMDE-EN-SR-1E.png
+  illustration: OneforOne-MADU-EN-VG-artwork.png
+- index: 2
+  image: OneforOne-VP24-JP-OP.png
 sets:
   en:
   - set_number: RGBT-EN045
@@ -322,6 +325,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.4
     rarities:
     - Common
+  - set_number: VP24-JP003
+    set_name: Quarter Century Legendary Selection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RGBT-KR045
     set_name: Raging Battle
