--- a/data/cards/43502497.yaml
+++ b/data/cards/43502497.yaml
@@ -52,6 +52,31 @@ images:
 - index: 1
   image: PendulumWitch-VJMP-JP-UR.png
 sets:
+  en:
+  - set_number: LEDE-EN098
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LEDE-DE098
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LEDE-FR098
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LEDE-IT098
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LEDE-PT098
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
   ja:
   - set_number: VJMP-JP244
     set_name: V Jump December 2023 promotional card
