--- a/data/cards/36629635.yaml
+++ b/data/cards/36629635.yaml
@@ -37,6 +37,31 @@ images:
 - index: 1
   image: DandyWhitelion-VJMP-JP-UR.png
 sets:
+  en:
+  - set_number: LEDE-EN097
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LEDE-DE097
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LEDE-FR097
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LEDE-IT097
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LEDE-PT097
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
   ja:
   - set_number: VJMP-JP236
     set_name: V Jump July 2023 promotional card
