--- a/data/cards/48654267.yaml
+++ b/data/cards/48654267.yaml
@@ -55,6 +55,31 @@ images:
 - index: 1
   image: SupremeKingZARCSynchroUniverse-QCDB-JP-UR.png
 sets:
+  en:
+  - set_number: LEDE-EN100
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LEDE-DE100
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LEDE-FR100
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LEDE-IT100
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LEDE-PT100
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
   ja:
   - set_number: QCDB-JP005
     set_name: Quarter Century Duelist Box
