--- a/data/cards/74652966.yaml
+++ b/data/cards/74652966.yaml
@@ -36,6 +36,31 @@ images:
 - index: 1
   image: CodeofSoul-QCDB-JP-UR.png
 sets:
+  en:
+  - set_number: LEDE-EN099
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LEDE-DE099
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LEDE-FR099
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LEDE-IT099
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LEDE-PT099
+    set_name: Legacy of Destruction
+    rarities:
+    - Super Rare
   ja:
   - set_number: QCDB-JP006
     set_name: Quarter Century Duelist Box
