--- a/data/cards/02333466.yaml
+++ b/data/cards/02333466.yaml
@@ -52,6 +52,7 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Quarter Century Secret Rare
+    - Holographic Rare
   - set_number: LEDE-JP001
     set_name: Legacy of Destruction +1 Bonus Pack
     rarities:
