--- a/data/cards/yugipedia1055329.yaml
+++ b/data/cards/yugipedia1055329.yaml
@@ -34,6 +34,7 @@ atk: 3000
 def: 2000
 series:
 - Memento
+- Field Searcher
 images:
 - index: 1
   image: MementomictlanTecuhtlicaCombinedConqueror-INFO-JP-OP.png
