--- a/data/cards/yugipedia1055270.yaml
+++ b/data/cards/yugipedia1055270.yaml
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 10
 atk: 3400
 def: 3000
+materials: 1 Level 8 LIGHT Dragon-Type monster + 1 Level 8 DARK Dragon-Type monster
 images:
 - index: 1
   image: LightandDarknessDragonLord-INFO-JP-OP.png
