--- a/data/cards/yugipedia1055300.yaml
+++ b/data/cards/yugipedia1055300.yaml
@@ -34,7 +34,7 @@ link_arrows:
 - ⬇
 - ↘
 atk: 2300
-materials: 3+ Effect Monsters
+materials: 2+ Effect Monsters, including a "Madolche" monster
 series:
 - Madolche
 images:
